--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -15,5 +15,11 @@
 .header-container a{
     text-decoration: none;
     color: white;
-    padding-left: 25px;
+    padding-left: 36px;
+    font-size: 17px;
+}
+.header-container a:hover{
+    color: orange;
+    border: 1px solid white;
+    padding: 5px;
 }
