--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -2,15 +2,38 @@
     width: 300px;
     height: 510px;
     box-shadow: 8px 10px 20px gray;
-    border-radius: 10px;
-    padding: 7px;
+    border-radius: 8px;
+    border: 1px solid #95A0A7;
+    position: relative;
+}
+.product-info{
+    margin:0px 14px;
+}
+.product-info p{
+    margin-bottom: 0px;
+    margin-top: 5px;
 }
 .product-name{
-    font-family:Lato;
+    font-family:'Lato';
     font-weight: 400, Regular;
     font-size:21px;
+    line-height: 25px;
+    margin-top: 7px;
 }
 .product img{
     width: 286px;
     height: 286px;
+    border-radius: 8px;
+    margin: 7px;
+}
+.button-cart{
+    width: 100%;
+    background: #FFE0B3;
+    border: none;
+    border-radius: 0px 0px 8px 8px;
+    position: absolute;
+    bottom: 0;
+}
+.button-cart:hover{
+    background-color: orange;
 }
