--- a/src/Components/Product/Product.css
+++ b/src/Components/Product/Product.css
@@ -33,7 +33,13 @@
     border-radius: 0px 0px 8px 8px;
     position: absolute;
     bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .button-cart:hover{
     background-color: orange;
+}
+.button-cart p{
+    margin-right: 8px;
 }
